--- a/jupyter_notebooks/C10_W5_Capstone_Project_BOTN_Final_Report.ipynb
+++ b/jupyter_notebooks/C10_W5_Capstone_Project_BOTN_Final_Report.ipynb
@@ -5,7 +5,7 @@
    "id": "ff5f1153-5236-4930-a83f-b0e69cfe801e",
    "metadata": {},
    "source": [
-    "# IBM Applied Data Science Capstone Project\n",
+    "# Data Science Project\n",
     "## Opening a new Fast Food Restaurant in Los Angeles, California"
    ]
   },
